--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
     "dev": "turbo dev",
     "lint": "turbo lint",
     "clean": "turbo clean",
-    "format": "prettier -w ."
+    "format": "prettier -w .",
+    "test": "turbo test"
   },
   "devDependencies": {
     "create-fumadocs-app": "^16.0.42",
+    "@eslint/js": "^9.37.0",
     "prettier": "^3.4.2",
-    "turbo": "^2.3.3"
+    "turbo": "^2.3.3",
+    "typescript": "^5.9.3",
+    "tsup": "^8.5.0",
+    "vitest": "^3.2.4",
+    "eslint": "^9.37.0",
+    "typescript-eslint": "^8.26.1"
   }
 }
