--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -23,6 +23,7 @@
   "scripts": {
     "build": "tsup",
     "test": "vitest run --passWithNoTests",
+    "test:watch": "vitest --passWithNoTests",
     "lint": "eslint ."
   },
   "tsup": {
