--- a/turbo.json
+++ b/turbo.json
@@ -16,6 +16,10 @@
     "test": {
       "dependsOn": ["^test"]
     },
+    "test:watch": {
+      "cache": false,
+      "persistent": true
+    },
     "clean": {
       "cache": false
     }
