--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -21,7 +21,7 @@
     "vitest": "^3.2.4"
   },
   "scripts": {
-    "build": "tsup",
+    "build": "tsup && tsc -p tsconfig.build.json",
     "test": "vitest run --passWithNoTests",
     "test:watch": "vitest --passWithNoTests",
     "lint": "eslint ."
@@ -29,7 +29,7 @@
   "tsup": {
     "entry": ["src/index.ts"],
     "format": ["esm"],
-    "dts": true,
+    "dts": false,
     "sourcemap": true,
     "clean": true
   }
