feat(db-sqlite): add SQLite database package with CRUD operations and configuration

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,6 +1,8 @@
 packages:
-  - "apps/*"
-  - "packages/*"
-  - "examples/*"
-  - "tests/*"
+  - apps/*
+  - packages/*
+  - examples/*
+  - tests/*
 
+onlyBuiltDependencies:
+  - better-sqlite3
