test: add comprehensive tests for materialize-db with SQLite and PostgreSQL
- Add full test suite for materialize-db adapter
- Test both SQLite and PostgreSQL dialects
- Use testcontainers for PostgreSQL integration tests
- Fix duplicate 'id' column issue in entity table writes
- Add boolean-to-integer conversion for both dialects
- Fix PostgreSQL connection cleanup to prevent unhandled errors
- Add type definitions for better-sqlite3 and pg

--- a/packages/materialize-db/package.json
+++ b/packages/materialize-db/package.json
@@ -16,15 +16,20 @@
     "@converge/materialize-core": "workspace:*"
   },
   "devDependencies": {
+    "@testcontainers/postgresql": "^11.10.0",
+    "@types/better-sqlite3": "^7.6.11",
+    "@types/pg": "^8.11.10",
+    "better-sqlite3": "^11.7.0",
     "eslint": "^9.37.0",
+    "pg": "^8.13.1",
     "tsup": "^8.5.0",
     "typescript": "^5.9.3",
     "vitest": "^3.2.4"
   },
   "scripts": {
     "build": "tsup && tsc -p tsconfig.build.json",
-    "test": "vitest run --pool=threads --passWithNoTests",
-    "test:watch": "vitest --pool=threads --passWithNoTests",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "lint": "eslint ."
   },
   "tsup": {
