--- a/packages/db-sqlite/package.json
+++ b/packages/db-sqlite/package.json
@@ -13,6 +13,8 @@
   "files": ["dist"],
   "dependencies": {
     "@converge/core": "workspace:*",
+    "@converge/materialize-core": "workspace:*",
+    "@converge/materialize-db": "workspace:*",
     "@converge/server": "workspace:*",
     "better-sqlite3": "^12.4.1"
   },
