refactor(materialize): switch to executor factory pattern
- Change materializer config from static object to factory function ({ db }) => config
- Separate createSqlExecutor/createSyncSqlExecutor from createCustomMaterializer/createSyncMaterializer
- Add createDrizzleSyncMaterializerExecutor/Config for better-sqlite3 support
- Update db-sqlite and db-turso to use new factory pattern
- Fix materialize-drizzle .d.ts emission by adding noEmit: false
- Add Drizzle atomicity test to db-sqlite
- Simplify CustomMaterializerConfig to only accept ExecutorConfig

BREAKING CHANGE: materializer option is now a factory function instead of static config

--- a/packages/db-sqlite/package.json
+++ b/packages/db-sqlite/package.json
@@ -19,7 +19,9 @@
     "better-sqlite3": "^12.4.1"
   },
   "devDependencies": {
+    "@converge/materialize-drizzle": "workspace:*",
     "@types/better-sqlite3": "^7.6.9",
+    "drizzle-orm": "^0.36.4",
     "eslint": "^9.37.0",
     "tsup": "^8.5.0",
     "typescript": "^5.9.3",
