refactor: rename @converge to @rippledb
- Rename all packages from @converge/* to @rippledb/*
- Rename ConvergeSchema type to RippleSchema
- Rename internal tables: converge_changes -> ripple_changes, converge_tags -> ripple_tags, converge_idempotency -> ripple_idempotency
- Update all documentation and README
- Update domain reference to rippledb.dev

All 42 tests pass, build successful.

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@converge/client",
+  "name": "@rippledb/client",
   "version": "0.0.0",
   "private": false,
   "type": "module",
@@ -12,7 +12,7 @@
   },
   "files": ["dist"],
   "dependencies": {
-    "@converge/core": "workspace:*"
+    "@rippledb/core": "workspace:*"
   },
   "devDependencies": {
     "eslint": "^9.37.0",
