--- a/packages/db-sqlite/package.json
+++ b/packages/db-sqlite/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@converge/db-sqlite",
+  "name": "@rippledb/db-sqlite",
   "version": "0.0.0",
   "private": false,
   "type": "module",
@@ -12,14 +12,14 @@
   },
   "files": ["dist"],
   "dependencies": {
-    "@converge/core": "workspace:*",
-    "@converge/materialize-core": "workspace:*",
-    "@converge/materialize-db": "workspace:*",
-    "@converge/server": "workspace:*",
+    "@rippledb/core": "workspace:*",
+    "@rippledb/materialize-core": "workspace:*",
+    "@rippledb/materialize-db": "workspace:*",
+    "@rippledb/server": "workspace:*",
     "better-sqlite3": "^12.4.1"
   },
   "devDependencies": {
-    "@converge/materialize-drizzle": "workspace:*",
+    "@rippledb/materialize-drizzle": "workspace:*",
     "@types/better-sqlite3": "^7.6.9",
     "drizzle-orm": "^0.36.4",
     "eslint": "^9.37.0",
