--- a/packages/materialize-db/package.json
+++ b/packages/materialize-db/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@converge/materialize-db",
+  "name": "@rippledb/materialize-db",
   "version": "0.0.0",
   "private": false,
   "type": "module",
@@ -12,8 +12,8 @@
   },
   "files": ["dist"],
   "dependencies": {
-    "@converge/core": "workspace:*",
-    "@converge/materialize-core": "workspace:*"
+    "@rippledb/core": "workspace:*",
+    "@rippledb/materialize-core": "workspace:*"
   },
   "devDependencies": {
     "@testcontainers/postgresql": "^11.10.0",
