--- a/package.json
+++ b/package.json
@@ -13,17 +13,22 @@
     "clean": "turbo clean",
     "format": "prettier -w .",
     "test": "vitest run",
-    "test:watch": "vitest --watch"
+    "test:watch": "vitest --watch",
+    "changeset": "changeset",
+    "version": "changeset version",
+    "release": "pnpm build && pnpm -r publish --access public"
   },
   "devDependencies": {
-    "create-fumadocs-app": "^16.0.42",
+    "@changesets/changelog-github": "^0.5.2",
+    "@changesets/cli": "^2.29.8",
     "@eslint/js": "^9.37.0",
+    "create-fumadocs-app": "^16.0.42",
+    "eslint": "^9.37.0",
     "prettier": "^3.4.2",
+    "tsup": "^8.5.0",
     "turbo": "^2.3.3",
     "typescript": "^5.9.3",
-    "tsup": "^8.5.0",
-    "vitest": "^3.2.4",
-    "eslint": "^9.37.0",
-    "typescript-eslint": "^8.26.1"
+    "typescript-eslint": "^8.26.1",
+    "vitest": "^3.2.4"
   }
 }
