--- a/packages/zod/package.json
+++ b/packages/zod/package.json
@@ -1,9 +1,25 @@
 {
   "name": "@rippledb/zod",
   "version": "0.1.1",
+  "description": "Zod schemas for runtime validation of RippleDB types",
   "private": false,
   "type": "module",
   "sideEffects": false,
+  "keywords": [
+    "rippledb",
+    "zod",
+    "validation",
+    "schema",
+    "sync",
+    "crdt",
+    "local-first",
+    "offline-first"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/eckerlein/rippledb.git",
+    "directory": "packages/zod"
+  },
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -11,7 +27,8 @@
     }
   },
   "files": [
-    "dist"
+    "dist",
+    "README.md"
   ],
   "dependencies": {
     "@rippledb/core": "workspace:*"
