chore: disable Vercel previews for Changesets PRs

--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,8 @@
 {
-  "installCommand": "pnpm install --filter=docs..."
+  "installCommand": "pnpm install --filter=docs...",
+  "git": {
+    "deploymentEnabled": {
+      "changeset-release/*": false
+    }
+  }
 }
