chore: configure Turborepo build command for Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "installCommand": "pnpm install --filter=docs...",
+  "buildCommand": "turbo build --filter=docs",
   "git": {
     "deploymentEnabled": {
       "changeset-release/*": false
