--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -10,6 +10,8 @@
     "postinstall": "fumadocs-mdx"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "fumadocs-core": "16.4.8",
     "fumadocs-mdx": "14.2.6",
     "fumadocs-ui": "16.4.8",
@@ -27,6 +29,7 @@
     "@types/react-dom": "^19.2.3",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3"
   }
 }
