--- a/packages/client-controllers/package.json
+++ b/packages/client-controllers/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rippledb/controllers",
+  "name": "@rippledb/client-controllers",
   "version": "0.1.0",
   "private": false,
   "type": "module",
@@ -16,7 +16,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/eckerlein/rippledb.git",
-    "directory": "packages/controllers"
+    "directory": "packages/client-controllers"
   },
   "exports": {
     ".": {
