--- a/.github/workflows/verify-packages.yml
+++ b/.github/workflows/verify-packages.yml
@@ -40,3 +40,8 @@ jobs:
 
       - name: Test
         run: pnpm test
+
+      - name: Verify package publish (dry-run)
+        run: pnpm -r publish --dry-run --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN || 'fake-token-for-dry-run' }}
