--- a/packages/bind-tanstack-query/package.json
+++ b/packages/bind-tanstack-query/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rippledb/bind-tanstack",
+  "name": "@rippledb/bind-tanstack-query",
   "version": "0.1.1",
   "private": false,
   "type": "module",
@@ -18,7 +18,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/eckerlein/rippledb.git",
-    "directory": "packages/bind-tanstack"
+    "directory": "packages/bind-tanstack-query"
   },
   "exports": {
     ".": {
