--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -40,7 +40,8 @@
   "dependencies": {
     "@rippledb/core": "workspace:*",
     "commander": "^12.0.0",
-    "jiti": "^2.4.0"
+    "jiti": "^2.4.0",
+    "valibot": "^1.2.0"
   },
   "peerDependencies": {
     "drizzle-orm": ">=0.30.0"
