ci: add workflow to prevent manual version changes in packages
- Add GitHub Actions workflow to check for version field changes in package.json files
- Block version changes except from changeset-release/* branches
- Allow new packages but require they start with version 0.1.0
- Add TypeScript script for version checking logic
- Add tsx and @types/node dependencies for running TypeScript scripts

--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@changesets/changelog-github": "^0.5.2",
     "@changesets/cli": "^2.29.8",
     "@eslint/js": "^9.37.0",
+    "@types/node": "^22.0.0",
     "create-fumadocs-app": "^16.0.42",
     "eslint": "^9.37.0",
     "prettier": "^3.4.2",
     "tsup": "^8.5.0",
+    "tsx": "^4.19.2",
     "turbo": "^2.3.3",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.26.1",
