--- a/packages/db-drizzle/package.json
+++ b/packages/db-drizzle/package.json
@@ -22,6 +22,7 @@
     "drizzle-orm": ">=0.36.0"
   },
   "devDependencies": {
+    "@rippledb/materialize-drizzle": "workspace:*",
     "@testcontainers/postgresql": "^10.25.0",
     "@types/better-sqlite3": "^7.6.9",
     "@types/pg": "^8.16.0",
