--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,7 @@ jobs:
         run: pnpm build
         env:
           TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
-          TURBO_TEAM: team_A7wndXM3SVI7ahudRib43OnP
+          TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
 
       - name: Create Release Pull Request or Publish
         id: changesets
