--- a/.github/workflows/verify-packages.yml
+++ b/.github/workflows/verify-packages.yml
@@ -41,6 +41,16 @@ jobs:
           TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
           TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
 
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: dist-folders
+          path: |
+            packages/*/dist
+            apps/*/dist
+          retention-days: 1
+          compression-level: 6
+
   lint:
     runs-on: ubuntu-latest
     needs: build
@@ -61,6 +71,11 @@ jobs:
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
+
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: dist-folders
 
       - name: Lint
         run: pnpm lint
@@ -89,6 +104,11 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: dist-folders
+
       - name: Test
         run: pnpm test
         env:
@@ -115,6 +135,11 @@ jobs:
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
+
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: dist-folders
 
       - name: Verify package publish (dry-run)
         run: |
