perf: disable lint/test caching and exclude OG images from build cache
- Disable lint cache to prevent timeout from large artifact uploads
- Disable test cache for consistency and to avoid similar timeout issues
- Exclude OG images (!out/og/**) from build cache to reduce cache size
- OG images are regenerated on every build but are fast to generate

--- a/turbo.json
+++ b/turbo.json
@@ -4,21 +4,23 @@
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
-      "outputs": [".next/**", "dist/**", "build/**"]
+      "outputs": [".next/**", "dist/**", "build/**", "!out/og/**"]
     },
     "dev": {
       "cache": false,
       "persistent": true
     },
     "lint": {
-      "dependsOn": ["^lint"]
+      "dependsOn": ["^lint"],
+      "cache": false
     },
     "test": {
-      "dependsOn": ["^build"]
+      "dependsOn": ["^build"],
+      "cache": false
     },
     "test:watch": {
-      "cache": false,
-      "persistent": true
+      "persistent": true,
+      "cache": false
     },
     "clean": {
       "cache": false
