--- a/.github/workflows/verify-packages.yml
+++ b/.github/workflows/verify-packages.yml
@@ -51,6 +51,29 @@ jobs:
           retention-days: 1
           compression-level: 6
 
+  format:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10.18.3
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
+          cache: pnpm
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Check formatting
+        run: pnpm format:check
+
   lint:
     runs-on: ubuntu-latest
     needs: build
