feat: improve TypeScript performance with project references and optimizations
   - Add TypeScript project references for incremental builds
   - Optimize VS Code TypeScript settings (8GB memory, better file watching)
   - Enable composite mode for referenced packages
   - Add performance measurement script
   - Reorganize scripts folder to src/dist structure
   - Update .gitignore for build artifacts

   Closes #41

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,11 @@ build
 .env.*.local
 chats
 
+# TypeScript incremental build info
+*.tsbuildinfo
+tsconfig.tsbuildinfo
+
+scripts/dist
+
+# TypeScript declaration source maps
+*.d.ts.map
