--- a/packages/store-memory/tsconfig.json
+++ b/packages/store-memory/tsconfig.json
@@ -5,5 +5,9 @@
     "outDir": "./dist"
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["dist", "node_modules"]
+  "exclude": ["dist", "node_modules"],
+  "references": [
+    { "path": "../core" },
+    { "path": "../client" }
+  ]
 }
