--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "turbo build",
     "dev": "turbo dev",
     "lint": "turbo lint",
-    "check:packages": "node scripts/verify-packages.mjs",
+    "check:packages": "node scripts/src/verify-packages.mjs",
     "clean": "turbo clean",
     "format": "dprint fmt",
     "format:check": "dprint check",
@@ -18,7 +18,8 @@
     "changeset": "changeset",
     "version": "changeset version",
     "release": "pnpm build && pnpm -r publish --access public",
-    "prepare": "husky"
+    "prepare": "husky",
+    "perf:tsc": "tsx scripts/src/measure-tsc-performance.ts"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.2",
