--- a/packages/bind-tanstack-query/tsconfig.json
+++ b/packages/bind-tanstack-query/tsconfig.json
@@ -3,8 +3,15 @@
   "compilerOptions": {
     "lib": ["ES2022", "DOM"],
     "rootDir": "./src",
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "composite": true,
+    "noEmit": false,
+    "emitDeclarationOnly": true
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["dist", "node_modules"]
+  "exclude": ["dist", "node_modules"],
+  "references": [
+    { "path": "../core" },
+    { "path": "../client" }
+  ]
 }
