--- a/packages/client-query/tsconfig.json
+++ b/packages/client-query/tsconfig.json
@@ -6,5 +6,11 @@
     "outDir": "./dist"
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["dist", "node_modules"]
+  "exclude": ["dist", "node_modules"],
+  "references": [
+    { "path": "../core" },
+    { "path": "../client" },
+    { "path": "../client-controllers" },
+    { "path": "../bind-tanstack-query" }
+  ]
 }
