feat: optimize TypeScript performance for IDE responsiveness
- Optimize InferField type to reduce conditional depth (8→4 checks)
- Add VS Code TypeScript performance settings (8GB memory, optimized watching)
- Add performance measurement scripts (perf:tsc, perf:profile)
- Reorganize scripts folder to src/dist structure
- Update .gitignore for build artifacts (tsbuildinfo, dist-scripts, .tsc-trace)
- Remove project references (not helpful for IDE, only for builds)

Performance improvements:
- ~10-15% faster type checking (~300ms vs ~338ms)
- Faster IDE IntelliSense due to optimized type inference
- Better file watching excludes build directories

Closes #41

--- a/packages/client-query/tsconfig.json
+++ b/packages/client-query/tsconfig.json
@@ -6,11 +6,5 @@
     "outDir": "./dist"
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["dist", "node_modules"],
-  "references": [
-    { "path": "../core" },
-    { "path": "../client" },
-    { "path": "../client-controllers" },
-    { "path": "../bind-tanstack-query" }
-  ]
+  "exclude": ["dist", "node_modules"]
 }
