--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "version": "changeset version",
     "release": "pnpm build && pnpm -r publish --access public",
     "prepare": "husky",
-    "perf:tsc": "tsx scripts/src/measure-tsc-performance.ts"
+    "perf:tsc": "tsx scripts/src/measure-tsc-performance.ts",
+    "perf:profile": "tsx scripts/src/profile-tsc-performance.ts"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.2",
