--- a/packages/bind-tanstack-query/tsconfig.json
+++ b/packages/bind-tanstack-query/tsconfig.json
@@ -3,15 +3,8 @@
   "compilerOptions": {
     "lib": ["ES2022", "DOM"],
     "rootDir": "./src",
-    "outDir": "./dist",
-    "composite": true,
-    "noEmit": false,
-    "emitDeclarationOnly": true
+    "outDir": "./dist"
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["dist", "node_modules"],
-  "references": [
-    { "path": "../core" },
-    { "path": "../client" }
-  ]
+  "exclude": ["dist", "node_modules"]
 }
