--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -2,10 +2,7 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "rootDir": "./src",
-    "outDir": "./dist",
-    "composite": true,
-    "noEmit": false,
-    "emitDeclarationOnly": true
+    "outDir": "./dist"
   },
   "include": ["src/**/*.ts"],
   "exclude": ["dist", "node_modules"]
