--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -5,8 +5,5 @@
     "outDir": "./dist"
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["dist", "node_modules"],
-  "references": [
-    { "path": "../core" }
-  ]
+  "exclude": ["dist", "node_modules"]
 }
