--- a/packages/store-memory/tsconfig.json
+++ b/packages/store-memory/tsconfig.json
@@ -5,9 +5,5 @@
     "outDir": "./dist"
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["dist", "node_modules"],
-  "references": [
-    { "path": "../core" },
-    { "path": "../client" }
-  ]
+  "exclude": ["dist", "node_modules"]
 }
