--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "release": "pnpm build && pnpm -r publish --access public",
     "prepare": "husky",
     "perf:tsc": "tsx scripts/src/measure-tsc-performance.ts",
-    "perf:profile": "tsx scripts/src/profile-tsc-performance.ts"
+    "perf:profile": "tsx scripts/src/profile-tsc-performance.ts",
+    "perf:diagnose": "tsx scripts/src/diagnose-all-packages.ts"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.2",
