perf: optimize ValidateOverrides type for better IDE performance
- Break down ValidateOverrides into helper types to reduce conditional depth
- Extract ValidateEntityFields, ValidateEntityOverride, and ValidateEntities
- Allows TypeScript to cache intermediate type results
- Improves type checking performance for zod package
- Add perf:find-types script to identify complex types

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "prepare": "husky",
     "perf:tsc": "tsx scripts/src/measure-tsc-performance.ts",
     "perf:profile": "tsx scripts/src/profile-tsc-performance.ts",
-    "perf:diagnose": "tsx scripts/src/diagnose-all-packages.ts"
+    "perf:diagnose": "tsx scripts/src/diagnose-all-packages.ts",
+    "perf:find-types": "tsx scripts/src/find-slow-types.ts"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.2",
