--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "perf:tsc": "tsx scripts/src/measure-tsc-performance.ts",
     "perf:profile": "tsx scripts/src/profile-tsc-performance.ts",
     "perf:diagnose": "tsx scripts/src/diagnose-all-packages.ts",
-    "perf:find-types": "tsx scripts/src/find-slow-types.ts"
+    "perf:find-types": "tsx scripts/src/find-slow-types.ts",
+    "perf:check": "tsx scripts/src/check-tsc-performance.ts"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.2",
