refactor: combine performance scripts into single tsc-performance.ts
- Merge diagnose-all-packages.ts and check-tsc-performance.ts into one script
- Add --check flag for CI mode (default is diagnose mode)
- Extract shared functions: getPackages(), runDiagnostics(), renderSummaryTable()
- Both modes now show live progress updates and summary table
- perf:check now includes full table output before showing check results
- Removed duplicate code and parsing between scripts

--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "prepare": "husky",
     "perf:tsc": "tsx scripts/src/measure-tsc-performance.ts",
     "perf:profile": "tsx scripts/src/profile-tsc-performance.ts",
-    "perf:diagnose": "tsx scripts/src/diagnose-all-packages.ts",
+    "perf:diagnose": "tsx scripts/src/tsc-performance.ts",
     "perf:find-types": "tsx scripts/src/find-slow-types.ts",
-    "perf:check": "tsx scripts/src/check-tsc-performance.ts"
+    "perf:check": "tsx scripts/src/tsc-performance.ts --check"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.2",
