--- a/package.json
+++ b/package.json
@@ -21,21 +21,24 @@
     "prepare": "husky",
     "perf:tsc": "tsx scripts/src/measure-tsc-performance.ts",
     "perf:profile": "tsx scripts/src/profile-tsc-performance.ts",
-    "perf:diagnose": "tsx scripts/src/tsc-performance.ts",
+    "perf:diagnose": "pnpm --filter @rippledb/scripts-perf build && node packages/scripts-perf/dist/tsc-performance.js",
     "perf:find-types": "tsx scripts/src/find-slow-types.ts",
-    "perf:check": "tsx scripts/src/tsc-performance.ts --check"
+    "perf:check": "pnpm --filter @rippledb/scripts-perf build && node packages/scripts-perf/dist/tsc-performance.js --check"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.2",
     "@changesets/cli": "^2.29.8",
     "@eslint/js": "^9.37.0",
     "@types/node": "^22.0.0",
+    "@types/react": "^19.2.9",
     "create-fumadocs-app": "^16.0.42",
     "dprint": "^0.51.1",
     "eslint": "^9.37.0",
     "husky": "^9.1.7",
+    "ink": "^6.6.0",
     "lint-staged": "^16.2.7",
     "prettier": "^3.4.2",
+    "react": "^19.2.3",
     "tsup": "^8.5.0",
     "tsx": "^4.19.2",
     "turbo": "^2.3.3",
