--- a/.github/workflows/typescript-performance.yml
+++ b/.github/workflows/typescript-performance.yml
@@ -5,6 +5,11 @@ on:
   push:
     branches: [main]
 
+# Prevent multiple runs from queuing up
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 permissions:
   contents: read
   pull-requests: write
@@ -12,6 +17,7 @@ permissions:
 jobs:
   check-performance:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     steps:
       - name: Checkout
         uses: actions/checkout@v4
