refactor(perf): modularize TypeScript performance diagnostics for CI support
- Split monolithic tsc-performance.tsx into modular structure:
  - logic.ts: Core business logic (UI-agnostic)
  - ci.ts: Console mode for CI/non-TTY environments
  - tty.tsx: Ink/React UI for interactive terminals
  - entrypoint.ts: Router that selects mode based on TTY/CI

- CI mode now works in GitHub Actions without TTY workarounds
- Console output shows live progress and formatted summary table
- Automatic retry logic (3x averaging) for failed packages in check mode
- Update package.json bin and scripts to use new entrypoint

Fixes CI failures where Ink required TTY

--- a/packages/scripts-perf/package.json
+++ b/packages/scripts-perf/package.json
@@ -4,18 +4,18 @@
   "description": "TypeScript performance diagnostics and checking tools",
   "type": "module",
   "bin": {
-    "tsc-performance": "./dist/tsc-performance.js"
+    "tsc-performance": "./dist/entrypoint.js"
   },
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
     "typecheck": "tsc --noEmit",
     "clean": "rm -rf dist",
-    "dev": "tsx src/tsc-performance.tsx"
+    "dev": "tsx src/entrypoint.ts"
   },
   "exports": {
     ".": {
-      "types": "./dist/tsc-performance.d.ts",
-      "import": "./dist/tsc-performance.js"
+      "types": "./dist/entrypoint.d.ts",
+      "import": "./dist/entrypoint.js"
     }
   },
   "files": [
