feat(perf): add local machine calibration for accurate performance checks
- Add 'pnpm perf:calibrate' command to establish local baseline
- Calibrates all packages (3x average) and calculates machine factor
- Applies 20% safety margin to account for measurement variance
- Stores calibration in .tsc-performance-local.json (gitignored)
- Local checks automatically use calibration factor when available
- CI always uses original limits (ignores local calibration)
- Shows calibration info and warnings in check output

This enables accurate local performance checks that account for
different hardware speeds while maintaining strict CI enforcement.

--- a/.gitignore
+++ b/.gitignore
@@ -16,5 +16,8 @@ tsconfig.tsbuildinfo
 scripts/dist
 .tsc-trace
 
+# Local TypeScript performance calibration
+.tsc-performance-local.json
+
 # TypeScript declaration source maps
 *.d.ts.map
