refactor(scripts): migrate verify-packages from .mjs to TypeScript
- Convert verify-packages.mjs to TypeScript (scripts/src/verify-packages.ts)
- Use tsx instead of node for execution (consistent with other scripts)
- Wrap in async main() to avoid top-level await issues
- Fix scripts-perf package config to match monorepo standards:
  - Add tsup.dts: false to package.json
  - Add emitDeclarationOnly and outDir to tsconfig.build.json

This fixes CI failures where scripts/src/ was missing and makes all
scripts consistent in using TypeScript + tsx.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "turbo build",
     "dev": "turbo dev",
     "lint": "turbo lint",
-    "check:packages": "node scripts/src/verify-packages.mjs",
+    "check:packages": "tsx scripts/src/verify-packages.ts",
     "clean": "turbo clean",
     "format": "dprint fmt",
     "format:check": "dprint check",
