--- a/packages/scripts-perf/tsconfig.build.json
+++ b/packages/scripts-perf/tsconfig.build.json
@@ -3,6 +3,8 @@
   "compilerOptions": {
     "declaration": true,
     "declarationMap": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "emitDeclarationOnly": true,
+    "outDir": "./dist"
   }
 }
