feat: add version check command to package.json and update CI workflow
- Introduced a new command "check:packages:version" in package.json to verify package versions.
- Updated the GitHub Actions workflow to utilize the new command for checking version field changes, enhancing maintainability and clarity.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "turbo dev",
     "lint": "turbo lint",
     "check:packages": "tsx scripts/src/verify-packages.ts",
+    "check:packages:version": "tsx scripts/src/verify-packages-version.ts",
     "clean": "turbo clean",
     "format": "dprint fmt",
     "format:check": "dprint check",
